[package]
name = "redis-server"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bytes = "1.5.0"
dashmap = "5.5.3"
tokio = { version = "1", features = ["full", "io-util"] }
phf = { version = "0.11", features = ["macros"] }

# [build]
# rustflags = ["--cfg", "tokio_unstable"]
